--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"forever": "^4.0.3",
 		"koa": "^2.16.1",
-		"koa-body": "^6.0.1"
+		"koa-body": "^6.0.1",
+		"uuid": "^11.1.0"
 	}
 }
